--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
 	"presets": ["es2015", "es2017"],
-	"plugins": ["transform-object-rest-spread"]
+	"plugins": ["transform-object-rest-spread"],
+	"ignore": [
+      "3rd/**/*",
+    ]
 }
