--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ supplement/
 .*
 !.babelrc
 !.gitignore
+*.xpi
 
 #### below is auto generated .gitignore content by Github app
 # Windows image file caches
