--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
@@ -16,6 +17,7 @@
     "gulp-jshint": "^2.0.1",
     "gulp-replace": "^0.5.4",
     "gulp-src-ordered-globs": "^1.0.3",
+    "gulp-zip": "^3.2.0",
     "jshint": "^2.9.4"
   },
   "scripts": {
