--- a/src/webextension/manifest.json
+++ b/src/webextension/manifest.json
@@ -21,7 +21,10 @@
 	},
 
 	"incognito": "spanning",
-	"permissions": ["storage"],
+	"permissions": [
+		"storage",
+		"http://dev.virtualearth.net/"
+	],
 
 	"background": {
 		"scripts": ["scripts/3rd/polyfill.min.js", "scripts/3rd/comm/webext.js", "scripts/3rd/ba-issemver.min.js", "scripts/background.js"]
