--- a/src/webextension/manifest.json
+++ b/src/webextension/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "__MSG_addon_name__",
 	"description": "__MSG_addon_desc__",
-	"version": "1.2",
+	"version": "1.3b",
 	"default_locale": "en-US",
 	"homepage_url": "https://github.com/Noitidart/Fake-Location/",
 	"icons": {
