--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "All my scripts are now babelified",
   "main": "index.js",
   "dependencies": {
+    "gulp-rename": "^1.2.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "react-router": "^4.0.0-alpha.6",
+    "react-router-addons-controlled": "0.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
@@ -18,10 +22,15 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
+    "gulp-contains": "^1.1.0",
     "gulp-if": "^2.0.1",
+    "gulp-insert": "^0.5.0",
+    "gulp-js-obfuscator": "^1.0.0",
+    "gulp-jscrambler": "^1.0.2",
     "gulp-jshint": "^2.0.1",
     "gulp-replace": "^0.5.4",
     "gulp-src-ordered-globs": "^1.0.3",
+    "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
     "jshint": "^2.9.4"
   },
