--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2017": "^6.16.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-add-src": "^0.2.0",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-contains": "^1.1.0",
