--- a/src/webext/manifest.json
+++ b/src/webext/manifest.json
@@ -51,5 +51,9 @@
         "default_title": "__MSG_browseraction_title__"
     },
 
-    "permissions": ["storage", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"]
+    "permissions": ["storage", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"],
+
+    "content_scripts": [
+        { "matches":["<all_urls>"], "js":["./contentscript/index.bundle.js"], "all_frames":true, "run_at":"document_start" }
+    ]
 }
