--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
         "eqeqeq": 2,
         "no-useless-escape": 2,
         "require-yield": 0,
-        "no-undef": 2
+        "no-undef": 2,
+        "react/prop-types": 0,
+        "no-empty": ["error", { "allowEmptyCatch":true }]
     }
 }
