--- a/src/webext/manifest.json
+++ b/src/webext/manifest.json
@@ -54,6 +54,6 @@
     "permissions": ["storage", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"],
 
     "content_scripts": [
-        { "matches":["<all_urls>"], "js":["./contentscript/index.bundle.js"], "all_frames":true, "run_at":"document_start" }
+        { "matches":["<all_urls>"], "js":["./contentscript/index.bundle.js"], "all_frames":true }
     ]
 }
