FrameScript register working in Firefox and Chrome not yet Edge. Unregister of FrameScript not working on shutdown yet

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "react": "^15.5.4",
+    "react-addons-shallow-compare": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
