--- a/src/webext/manifest.json
+++ b/src/webext/manifest.json
@@ -51,9 +51,7 @@
         "default_title": "__MSG_browseraction_title__"
     },
 
-    "permissions": ["storage", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>"],
+    "permissions": ["storage", "webNavigation", "webRequest", "webRequestBlocking", "<all_urls>", "tabs"],
 
-    "content_scripts": [
-        { "matches":["<all_urls>"], "js":["./contentscript/index.bundle.js"], "all_frames":true }
-    ]
+    "web_accessible_resources": ["injectable/index.bundle.js"]
 }
